--- a/src/components/AppHome.module.scss
+++ b/src/components/AppHome.module.scss
@@ -36,19 +36,14 @@
 
   .welcome-inner {
     height: 100%;
-    width: 1200px;
     margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    max-width: 1200px;
 
     .welcome-item {
       height: 100%;
-      width: 380px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
 
       .icon {
         width: 70px;
