--- a/src/view/Home.module.scss
+++ b/src/view/Home.module.scss
@@ -115,6 +115,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
       }
     }
   }
@@ -126,4 +127,30 @@ svg.icon {
   path {
     transform-origin: center;
   }
+}
+:deep(.ant-card) {
+  border-radius: 15px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+:deep(.ant-card-bordered) {
+  border: none;
+}
+
+:deep(.ant-card-cover) {
+  height: 390px;
+  overflow: hidden;
+  border-radius: 15px 15px 0 0;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+:deep(.ant-card-cover img) {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 0;
 }
