--- a/src/view/Home.module.scss
+++ b/src/view/Home.module.scss
@@ -1,5 +1,7 @@
 .banner {
   height: 450px;
+  width: 100%;
+  position: relative;
   background-image: url("@/assets/banner.png");
   background-size: cover;
   background-position: center;
@@ -10,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    top: 29%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 
