新增模板列表接口，支持获取模板数据并添加加载延迟效果；更新store以管理模板数据和总数；优化首页模板展示样式。

--- a/src/view/Home.module.scss
+++ b/src/view/Home.module.scss
@@ -121,6 +121,13 @@
       }
     }
   }
+
+  .template-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 svg.icon {
