优化模板列表组件的响应式布局，调整样式；更新store以支持动态获取模板数据；修复首页模板展示逻辑

--- a/src/view/Home.module.scss
+++ b/src/view/Home.module.scss
@@ -122,11 +122,9 @@
     }
   }
 
-  .template-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  .template-container {
+    width: 100%;
+    max-width: 1200px;
   }
 }
 
